--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -23,6 +23,7 @@
 
         <main>
             <section>
+                <!-- client libray functions -->
                 <form class="" onsubmit="return Client.handleSubmit(event)">
                     <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
                     <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
